overlapping elements / positioning fix

--- a/berry_styles.css
+++ b/berry_styles.css
@@ -18,7 +18,11 @@ h1 {
     height: 450px;
     border: 5px solid black;
     padding: 10px;
-    margin: 20px;
+
+    position: relative;
+    margin-left: 50px;
+    margin-top: 50px;
+
     background-color: lightseagreen;
 }
 
@@ -36,19 +40,29 @@ h1 {
     height: 550px;
     border: 5px solid black;
     padding: 0px;
-    margin: 15px;
+
+    position: relative;
+    margin-right: 50px;
+    margin-top: 50px;
+
     text-align: center;
     background-color: lightcoral;
 }
 
 .search-input-box {
-    width:25%;
-    margin:auto;
-    background-color: grey;
     clear: both;
+    width:25%;
+    margin-top: 75px;
+    margin-right:auto;
+    margin-bottom:0;
+    margin-left:auto;
+
+    position: relative;
+    text-align:center;
+
+    background-color: grey;
     padding: 10px;
     border: 5px solid black;
-    text-align:center;
     font-size: 18px;
 }
 
@@ -68,8 +82,8 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     max-width:50%;
-    height: 50%;
+    height: 40%;
     position: relative;
-    top: 30px;
+    top: 45px;
     border-radius: 20%;
 }
